--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="Header">
+<div class="HeaderTop">
+<div class="Element1"><img src="img/icons/unnamed.png" alt="" style="width: 64px;"><p>KARIMZODA MUSTAFO</p></div>
+<div class="Element2"><p>HOME</p>
+<p>ABOUT</p>
+<p>SKILLS</p>
+<p>PROJECTS</p>
+<p>CONTACT</p></div>
+<div class="Element3"><input type="text" class="Search" placeholder="Search"><img src="img/icons/free-icon-search-3495620.png" alt="" style="filter: invert(1);"><div class="AfterSearch"></div> <button class="CV">Download CV</button></div>
+
+</div>
+
+    </div>
 </body>
 </html>
