--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <p>PROJECTS</p>
 <p>CONTACT</p></div>
 <div class="Element3"><input type="text" class="Search" placeholder="Search"><img src="img/icons/free-icon-search-3495620.png" alt="" style="filter: invert(1);"><div class="AfterSearch"></div> <button class="CV">Download CV</button></div>
+<div class="Element4"><img src="img/icons/free-icon-menu-10308923.png" alt="" style="width: 48px; filter: invert(1);"></div>
 
 </div>
 
