Head for Laptop

--- a/index.html
+++ b/index.html
@@ -1,25 +1,62 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="Header">
-<div class="HeaderTop">
-<div class="Element1"><img src="img/icons/unnamed.png" alt="" style="width: 64px;"><p>KARIMZODA MUSTAFO</p></div>
-<div class="Element2"><p>HOME</p>
-<p>ABOUT</p>
-<p>SKILLS</p>
-<p>PROJECTS</p>
-<p>CONTACT</p></div>
-<div class="Element3"><input type="text" class="Search" placeholder="Search"><img src="img/icons/free-icon-search-3495620.png" alt="" style="filter: invert(1);"><div class="AfterSearch"></div> <button class="CV">Download CV</button></div>
-<div class="Element4"><img src="img/icons/free-icon-menu-10308923.png" alt="" style="width: 48px; filter: invert(1);"></div>
+      <div class="HeaderTop">
+        <div class="Element1">
+          <img src="img/icons/unnamed.png" alt="" style="width: 64px" />
+          <p>KARIMZODA MUSTAFO</p>
+        </div>
+        <div class="Element2">
+          <p>HOME</p>
+          <p>ABOUT</p>
+          <p>SKILLS</p>
+          <p>PROJECTS</p>
+          <p>CONTACT</p>
+        </div>
+        <div class="Element3">
+          <input type="text" class="Search" placeholder="Search" /><img
+            src="img/icons/free-icon-search-3495620.png"
+            alt=""
+            style="filter: invert(1)"
+          />
+          <div class="AfterSearch"></div>
+          <button class="CV">Download CV</button>
+        </div>
+        <div class="Element4">
+          <img
+            src="img/icons/free-icon-menu-10308923.png"
+            alt=""
+            style="width: 48px; filter: invert(1)"
+          />
+        </div>
+      </div>
 
+<div class="HeaderBottom">
+<img src="img/icons/free-icon-star-7589102.png" alt="" class="STAR">
+<img src="img/icons/free-icon-web-page-9800545.png" alt="" class="WEB">
+<div class="MEBOX"><img src="img/img/photo_2025-11-03_14-46-48.jpg" alt="" class="ME"></div>
+<div class="HBCenter">
+<p style="padding-top: 20px;">Hi Guys, I'm</p>
+<h1>KARIMZODA MUSTAFO</h1>
+<div class="FD"><h2>Frontend Developer </h2><img src="img/icons/free-icon-stars-3266390.png" alt="" class="STARS"></div>
+<p style="color: rgb(194, 194, 194); font-weight: 200;">Junior Web developer. Try to make beautiful web experiences.</p>
 </div>
-
+<div  class="Button">
+<button class="BUT1">View My Works <img src="img/icons/free-icon-web-browser-9415542.png" alt=""></button>
+<button class="BUT2"><img src="img/icons/free-icon-internet-download-manager-13876813.png" alt="" style="filter: invert(1);"> Resume </button>
+</div>
+<div class="Follow">
+<img src="img/icons/free-icon-instagram-3955024.png" alt="" class="f1"><img src="img/icons/free-icon-facebook-4494475.png" alt="" class="f1"><img src="img/icons/free-icon-linkedin-4494497.png" alt="" class="f1"><img src="img/icons/free-icon-telegram-2111646.png" alt="" class="f1"><img src="img/icons/free-icon-whatsapp-4494494.png" alt="" class="f1"><img src="img/icons/free-icon-youtube-4494485.png" alt="" class="f1"><img src="img/icons/free-icon-vk-3670055.png" alt="" class="f1"><img src="img/icons/free-icon-odnoklassniki-3670250.png" alt="" class="f1"><img src="img/icons/free-icon-github-2111432.png" alt="" class="f1">
+</div>
+</div>
+<img src="img/icons/free-icon-down-arrow-5772127.png" alt="" class="DOWN">
     </div>
-</body>
+  </body>
 </html>
