Header for tablet

--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
 <img src="img/icons/free-icon-instagram-3955024.png" alt="" class="f1"><img src="img/icons/free-icon-facebook-4494475.png" alt="" class="f1"><img src="img/icons/free-icon-linkedin-4494497.png" alt="" class="f1"><img src="img/icons/free-icon-telegram-2111646.png" alt="" class="f1"><img src="img/icons/free-icon-whatsapp-4494494.png" alt="" class="f1"><img src="img/icons/free-icon-youtube-4494485.png" alt="" class="f1"><img src="img/icons/free-icon-vk-3670055.png" alt="" class="f1"><img src="img/icons/free-icon-odnoklassniki-3670250.png" alt="" class="f1"><img src="img/icons/free-icon-github-2111432.png" alt="" class="f1">
 </div>
 </div>
+<div class="DOWNBOX">
 <img src="img/icons/free-icon-down-arrow-5772127.png" alt="" class="DOWN">
+</div>
     </div>
   </body>
 </html>
