--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
           <p>KARIMZODA MUSTAFO</p>
         </div>
         <div class="Element2">
-          <p>HOME</p>
-          <p>ABOUT</p>
-          <p>SKILLS</p>
-          <p>PROJECTS</p>
-          <p>CONTACT</p>
+          <p class="E2">HOME</p>
+          <p class="E2">ABOUT</p>
+          <p class="E2">SKILLS</p>
+          <p class="E2">PROJECTS</p>
+          <p class="E2">CONTACT</p>
         </div>
         <div class="Element3">
           <input type="text" class="Search" placeholder="Search" /><img
@@ -38,26 +38,152 @@
         </div>
       </div>
 
-<div class="HeaderBottom">
-<img src="img/icons/free-icon-star-7589102.png" alt="" class="STAR">
-<img src="img/icons/free-icon-web-page-9800545.png" alt="" class="WEB">
-<div class="MEBOX"><img src="img/img/photo_2025-11-03_14-46-48.jpg" alt="" class="ME"></div>
-<div class="HBCenter">
-<p style="padding-top: 20px;">Hi Guys, I'm</p>
-<h1>KARIMZODA MUSTAFO</h1>
-<div class="FD"><h2>Frontend Developer </h2><img src="img/icons/free-icon-stars-3266390.png" alt="" class="STARS"></div>
-<p style="color: rgb(194, 194, 194); font-weight: 200;">Junior Web developer. Try to make beautiful web experiences.</p>
-</div>
-<div  class="Button">
-<button class="BUT1">View My Works <img src="img/icons/free-icon-web-browser-9415542.png" alt=""></button>
-<button class="BUT2"><img src="img/icons/free-icon-internet-download-manager-13876813.png" alt="" style="filter: invert(1);"> Resume </button>
-</div>
-<div class="Follow">
-<img src="img/icons/free-icon-instagram-3955024.png" alt="" class="f1"><img src="img/icons/free-icon-facebook-4494475.png" alt="" class="f1"><img src="img/icons/free-icon-linkedin-4494497.png" alt="" class="f1"><img src="img/icons/free-icon-telegram-2111646.png" alt="" class="f1"><img src="img/icons/free-icon-whatsapp-4494494.png" alt="" class="f1"><img src="img/icons/free-icon-youtube-4494485.png" alt="" class="f1"><img src="img/icons/free-icon-vk-3670055.png" alt="" class="f1"><img src="img/icons/free-icon-odnoklassniki-3670250.png" alt="" class="f1"><img src="img/icons/free-icon-github-2111432.png" alt="" class="f1">
-</div>
-</div>
-<div class="DOWNBOX">
-<img src="img/icons/free-icon-down-arrow-5772127.png" alt="" class="DOWN">
+      <div class="HeaderBottom">
+        <img src="img/icons/free-icon-star-7589102.png" alt="" class="STAR" />
+        <img
+          src="img/icons/free-icon-web-page-9800545.png"
+          alt=""
+          class="WEB"
+        />
+        <div class="MEBOX">
+          <img src="img/img/photo_2025-11-03_14-46-48.jpg" alt="" class="ME" />
+        </div>
+        <div class="HBCenter">
+          <p style="padding-top: 20px">Hi Guys, I'm</p>
+          <h1>KARIMZODA MUSTAFO</h1>
+          <div class="FD">
+            <h2>Frontend Developer</h2>
+            <img
+              src="img/icons/free-icon-stars-3266390.png"
+              alt=""
+              class="STARS"
+            />
+          </div>
+          <p style="color: rgb(194, 194, 194); font-weight: 200">
+            Junior Web developer. Try to make beautiful web experiences.
+          </p>
+        </div>
+        <div class="Button">
+          <button class="BUT1">
+            View My Works
+            <img src="img/icons/free-icon-web-browser-9415542.png" alt="" />
+          </button>
+          <button class="BUT2">
+            <img
+              src="img/icons/free-icon-internet-download-manager-13876813.png"
+              alt=""
+              style="filter: invert(1)"
+            />
+            Resume
+          </button>
+        </div>
+        <div class="Follow">
+          <img
+            src="img/icons/free-icon-instagram-3955024.png"
+            alt=""
+            class="f1"
+          /><img
+            src="img/icons/free-icon-facebook-4494475.png"
+            alt=""
+            class="f1"
+          /><img
+            src="img/icons/free-icon-linkedin-4494497.png"
+            alt=""
+            class="f1"
+          /><img
+            src="img/icons/free-icon-telegram-2111646.png"
+            alt=""
+            class="f1"
+          /><img
+            src="img/icons/free-icon-whatsapp-4494494.png"
+            alt=""
+            class="f1"
+          /><img
+            src="img/icons/free-icon-youtube-4494485.png"
+            alt=""
+            class="f1"
+          /><img
+            src="img/icons/free-icon-vk-3670055.png"
+            alt=""
+            class="f1"
+          /><img
+            src="img/icons/free-icon-odnoklassniki-3670250.png"
+            alt=""
+            class="f1"
+          /><img
+            src="img/icons/free-icon-github-2111432.png"
+            alt=""
+            class="f1"
+          />
+        </div>
+      </div>
+      <div class="DOWNBOX">
+        <img
+          src="img/icons/free-icon-down-arrow-5772127.png"
+          alt=""
+          class="DOWN"
+        />
+      </div>
+    </div>
+
+    <div class="Bottom">
+      <div class="Title1">
+        <p>Get to know me</p>
+        <h1>About Me</h1>
+        <div></div>
+      </div>
+      <div class="ABOUT">
+        <div class="BIO">
+          <div class="Story">
+            <img
+              src="img/icons/free-icon-curriculum-vitae-2779829.png"
+              alt=""
+              style="width: 36px"
+            />
+            <h1>My Story</h1>
+          </div>
+          <p>
+            I started my journey in web development with a strong interest in
+            technology and design. At the beginning, I learned HTML and CSS to
+            understand how websites are built and structured. Over time, I
+            improved my skills by practicing responsive layouts, animations, and
+            modern UI techniques.
+          </p>
+
+          <p>
+            Currently, I continue learning JavaScript and improving my
+            problem-solving skills. I enjoy creating clean, user-friendly
+            interfaces and focusing on performance and usability.
+          </p>
+
+          <p>
+            My goal is to grow as a frontend developer, work on real projects,
+            and continuously improve my technical and creative abilities.
+          </p>
+        </div>
+        <div class="Activity">
+          <div class="Education">
+            <h1>🎓 Education</h1>
+            <h3>Political Science - Lawyer</h3>
+            <h5>
+              Academy of Public Administration under the President of the
+              Republic of Tajikistan • 2023 - Now
+            </h5>
+            <p>Dushanbe, Tajikistan</p>
+          </div>
+          <div class="Experience">
+            <h1>💼 Experience</h1>
+            <h3>Customer Support Specialist</h3>
+            <h5>LLC "TACOM" (ZET-MOBILE) • Jan 2023 - Feb 2025</h5>
+            <h3>Senior Workforce Management Specialist</h3>
+            <h5>LLC "TACOM" (ZET-MOBILE) • Feb 2025 - Now</h5>
+          </div>
+        </div>
+      </div>
+      <div class="Title1">
+  <p>What I do</p>
+  <h1>My Skills</h1>
+  <div></div>
 </div>
     </div>
   </body>
