--- a/index.html
+++ b/index.html
@@ -185,6 +185,42 @@
   <h1>My Skills</h1>
   <div></div>
 </div>
+<div class="Skills">
+<div class="SKLKNOW">
+  <img src="img/Skills/free-icon-html-5-174854.png" alt="">
+  <div class="skill"><div class="progress p1"></div></div>
+</div>
+<div class="SKLKNOW">
+  <img src="img/Skills/free-icon-css-3-732190.png" alt="">
+  <div class="skill"><div class="progress p2"></div></div>
+</div>
+<div class="SKLKNOW">
+  <img src="img/Skills/free-icon-js-5968292.png" alt="">
+  <div class="skill"><div class="progress p3"></div></div>
+</div>
+<div class="SKLKNOW">
+  <img src="img/Skills/free-icon-c-6132222.png" alt="">
+  <div class="skill"><div class="progress p4"></div></div>
+</div>
+<div class="SKLKNOW">
+  <img src="img/Skills/free-icon-figma-5968705.png" alt="">
+  <div class="skill"><div class="progress p5"></div></div>
+</div>
+<div class="SKLKNOW">
+  <img src="img/Skills/free-icon-commit-git-12514434.png" alt="">
+  <div class="skill"><div class="progress p6"></div></div>
+</div>
+<div class="SKLKNOW">
+  <img src="img/Skills/free-icon-github-2111425.png" alt="">
+  <div class="skill"><div class="progress p7"></div></div>
+</div>
+<div class="SKLKNOW">
+  <img src="img/Skills/free-icon-office-732222.png" alt="">
+  <div class="skill"><div class="progress p8"></div></div>
+</div>
+</div>
+
+
     </div>
   </body>
 </html>
