--- a/index.html
+++ b/index.html
@@ -211,12 +211,45 @@
   <div class="skill"><div class="progress p6"></div></div>
 </div>
 <div class="SKLKNOW">
-  <img src="img/Skills/free-icon-github-2111425.png" alt="">
+  <img src="img/Skills/free-icon-github-2111425.png" alt="" style="filter: invert(1);">
   <div class="skill"><div class="progress p7"></div></div>
 </div>
 <div class="SKLKNOW">
   <img src="img/Skills/free-icon-office-732222.png" alt="">
   <div class="skill"><div class="progress p8"></div></div>
+</div>
+</div>
+ <div class="Title1">
+  <p>My Work</p>
+  <h1>Portfolio</h1>
+  <div></div>
+</div>
+<div class="MyProject">
+<div class="Project1">
+ <img src="img/img/Снимок экрана 2026-02-10 212803.png" alt="" class="IMG1">
+  <h1>My first Project</h1>
+  <p>It is my first project as Junior Frontend Developer that makes with HTML and CSS</p>
+  <div class="LANG">
+    <div>
+      HTML
+    </div>
+  <div>
+CSS
+  </div>
+</div>
+</div>
+<div class="Project1">
+ <img src="img/img/Снимок экрана 2026-02-10 213139.png" alt="" class="IMG1">
+  <h1>My Bio</h1>
+  <p>It is my Bio as Junior Frontend Developer that makes with HTML and CSS</p>
+  <div class="LANG">
+    <div>
+      HTML
+    </div>
+  <div>
+CSS
+  </div>
+</div>
 </div>
 </div>
 
