BodyBottom for laptop

--- a/index.html
+++ b/index.html
@@ -181,78 +181,90 @@
         </div>
       </div>
       <div class="Title1">
-  <p>What I do</p>
-  <h1>My Skills</h1>
-  <div></div>
-</div>
-<div class="Skills">
-<div class="SKLKNOW">
-  <img src="img/Skills/free-icon-html-5-174854.png" alt="">
-  <div class="skill"><div class="progress p1"></div></div>
-</div>
-<div class="SKLKNOW">
-  <img src="img/Skills/free-icon-css-3-732190.png" alt="">
-  <div class="skill"><div class="progress p2"></div></div>
-</div>
-<div class="SKLKNOW">
-  <img src="img/Skills/free-icon-js-5968292.png" alt="">
-  <div class="skill"><div class="progress p3"></div></div>
-</div>
-<div class="SKLKNOW">
-  <img src="img/Skills/free-icon-c-6132222.png" alt="">
-  <div class="skill"><div class="progress p4"></div></div>
-</div>
-<div class="SKLKNOW">
-  <img src="img/Skills/free-icon-figma-5968705.png" alt="">
-  <div class="skill"><div class="progress p5"></div></div>
-</div>
-<div class="SKLKNOW">
-  <img src="img/Skills/free-icon-commit-git-12514434.png" alt="">
-  <div class="skill"><div class="progress p6"></div></div>
-</div>
-<div class="SKLKNOW">
-  <img src="img/Skills/free-icon-github-2111425.png" alt="" style="filter: invert(1);">
-  <div class="skill"><div class="progress p7"></div></div>
-</div>
-<div class="SKLKNOW">
-  <img src="img/Skills/free-icon-office-732222.png" alt="">
-  <div class="skill"><div class="progress p8"></div></div>
-</div>
-</div>
- <div class="Title1">
-  <p>My Work</p>
-  <h1>Portfolio</h1>
-  <div></div>
-</div>
-<div class="MyProject">
-<div class="Project1">
- <img src="img/img/Снимок экрана 2026-02-10 212803.png" alt="" class="IMG1">
-  <h1>My first Project</h1>
-  <p>It is my first project as Junior Frontend Developer that makes with HTML and CSS</p>
-  <div class="LANG">
-    <div>
-      HTML
-    </div>
-  <div>
-CSS
-  </div>
-</div>
-</div>
-<div class="Project1">
- <img src="img/img/Снимок экрана 2026-02-10 213139.png" alt="" class="IMG1">
-  <h1>My Bio</h1>
-  <p>It is my Bio as Junior Frontend Developer that makes with HTML and CSS</p>
-  <div class="LANG">
-    <div>
-      HTML
-    </div>
-  <div>
-CSS
-  </div>
-</div>
-</div>
-</div>
+        <p>What I do</p>
+        <h1>My Skills</h1>
+        <div></div>
+      </div>
+      <div class="Skills">
+        <div class="SKLKNOW">
+          <img src="img/Skills/free-icon-html-5-174854.png" alt="" />
+          <div class="skill"><div class="progress p1"></div></div>
+        </div>
+        <div class="SKLKNOW">
+          <img src="img/Skills/free-icon-css-3-732190.png" alt="" />
+          <div class="skill"><div class="progress p2"></div></div>
+        </div>
+        <div class="SKLKNOW">
+          <img src="img/Skills/free-icon-js-5968292.png" alt="" />
+          <div class="skill"><div class="progress p3"></div></div>
+        </div>
+        <div class="SKLKNOW">
+          <img src="img/Skills/free-icon-c-6132222.png" alt="" />
+          <div class="skill"><div class="progress p4"></div></div>
+        </div>
+        <div class="SKLKNOW">
+          <img src="img/Skills/free-icon-figma-5968705.png" alt="" />
+          <div class="skill"><div class="progress p5"></div></div>
+        </div>
+        <div class="SKLKNOW">
+          <img src="img/Skills/free-icon-commit-git-12514434.png" alt="" />
+          <div class="skill"><div class="progress p6"></div></div>
+        </div>
+        <div class="SKLKNOW">
+          <img
+            src="img/Skills/free-icon-github-2111425.png"
+            alt=""
+            style="filter: invert(1)"
+          />
+          <div class="skill"><div class="progress p7"></div></div>
+        </div>
+        <div class="SKLKNOW">
+          <img src="img/Skills/free-icon-office-732222.png" alt="" />
+          <div class="skill"><div class="progress p8"></div></div>
+        </div>
+      </div>
+      <div class="Title1">
+        <p>My Work</p>
+        <h1>Portfolio</h1>
+        <div></div>
+      </div>
+      <div class="MyProject">
+        <div class="Project1">
+          <img
+            src="img/img/Снимок экрана 2026-02-10 212803.png"
+            alt=""
+            class="IMG1"
+          />
+          <h1>My first Project</h1>
+          <p>
+            It is my first project as Junior Frontend Developer that makes with
+            HTML and CSS
+          </p>
+          <div class="LANG">
+            <div>HTML</div>
+            <div>CSS</div>
+          </div>
+        </div>
+        <div class="Project1">
+          <img
+            src="img/img/Снимок экрана 2026-02-10 213139.png"
+            alt=""
+            class="IMG1"
+          />
+          <h1>My Bio</h1>
+          <p>
+            It is my Bio as Junior Frontend Developer that makes with HTML and
+            CSS
+          </p>
+          <div class="LANG">
+            <div>HTML</div>
+            <div>CSS</div>
+          </div>
+        </div>
+      </div>
 
+
+   <div class="view"> <button><p>View More Projects</p></button></div>  
 
     </div>
   </body>
