Footer for laptop

--- a/index.html
+++ b/index.html
@@ -266,6 +266,69 @@
 
    <div class="view"> <button><p>View More Projects</p></button></div>  
 
+
+
     </div>
+    <div class="Footer">
+      <div class="FInto">
+<div class="Title1">
+        <p>Let's Connect</p>
+        <h1>Get in Touch</h1>
+        <div></div>
+      </div>
+        <img
+          src="img/icons/free-icon-web-page-9800545.png"
+          alt=""
+          class="w1"
+        />
+        <img
+              src="img/icons/free-icon-stars-3266390.png"
+              alt=""
+              class="w2"
+            />
+            <img
+          src="img/icons/free-icon-web-page-9800545.png"
+          alt=""
+          class="w3"
+        />
+        <div class="Contact">
+<div  class="CMleft">
+  <h1 style="color: white;">Contact Information</h1>
+<div class="Mail"><div class="iconcontact"><img src="img/icons/free-icon-mail-646094 (1).png" alt=""></div> <div class="Email"><p>Email</p>
+<h3>mustafo.karimzoda@zet-mobile.com</h3></div></div>
+<div class="Mail"><div class="iconcontact"><img src="img/icons/free-icon-call-15313630.png" alt=""></div> <div class="Email"><p>Phone</p>
+<h3>+992 917 20 8222</h3></div></div>
+<div class="Mail"><div class="iconcontact"><img src="img/icons/free-icon-placeholder-4720736.png" alt=""></div> <div class="Email"><p>Location</p>
+<h3>Republic of Tajikistan, Dushanbe</h3></div></div>
+
+<div class="Mail info"> 
+  <h2>💡 Quick Info</h2>
+  <p>✓ Available for freelance projects</p>
+  <p>✓ Open to full-time opportunities</p>
+  <p>✓ Remote work friendly</p>
+  <p>✓ Usually responds within 24 hours</p>
+</div>
+</div>
+
+
+
+<div class="CMright">
+<div class="ContactMe">
+<h1>Send a Message</h1>
+<p>Name</p>
+<input type="text" placeholder="Your name">
+<p>Email</p>
+<input type="text" placeholder="your.email@example.com">
+<p>Message</p>
+<textarea name="" id="" placeholder="Your Message..." class="Message"></textarea>
+<Button>Send Message</Button>
+</div>
+</div>
+</div>
+        </div>
+</div>
+<div>
+
+</div>
   </body>
 </html>
