--- a/index.html
+++ b/index.html
@@ -327,8 +327,9 @@
 </div>
         </div>
 </div>
-<div>
-
+<div class="end">
+<h5>🌟Made by Karimzade_8222🌟</h5>
+<p>© 2026 All rights reserved.</p>
 </div>
   </body>
 </html>
